crates/db/src/dialect/snapshots/switchyard_db__dialect__tests__postgres_script_exec.snap
---
source: crates/db/src/dialect/mod.rs
expression: "[d.script_exec(ObjectKind::Procedure, &p, &params),\nd.script_exec(ObjectKind::Procedure, &p, &[]),\nd.script_exec(ObjectKind::Function, &p, &params),\nd.script_exec(ObjectKind::Function, &p, &[String::new()]),].join(\"\\n\\n\")"
---
CALL sales.archive(cid => NULL, since => NULL);

CALL sales.archive();

SELECT * FROM sales.archive(cid => NULL, since => NULL);

SELECT * FROM sales.archive(NULL);
